@@ -1,3 +1,6 @@
+Changelog 0.3.87 [20230710]:
+- Used anify for zoro
+
 Changelog 0.3.86 [20230701]:
 - Fix 9anime scraper using anify
 
